# osc-geo-h3loader-cli

./: README.md  requirements.txt  setup.py  temp_setup.sh
osc-geo-h3loader-cli/: pyproject.toml  requirements.txt
osc-geo-h3loader-cli/src/cli/: cli.py
src/cli/: visualizer.py
src/geoserver/: geomesh.py
src/loader/: abstract_loader.py  aggregation_step.py  index_loader.py  interpolator.py  preprocessing_step.py
src/shape/: shape.py
test/csvloader/: test_csvloader.py
test/load_pipeline/: test_loading_pipeline.py  test_loading_pipeline_factory.py
test/parquet_loader/: test_parquet_loader.py
