"[tool.poetry]\nname = \"osc-geo-h3loader-cli\"\nversion = \"0.1.0\"\ndescription = \"CLI for loading geospatial data into H3 grids\"\n\ [tool.poetry.dependencies]\npython = \"^3.10\"\nfastapi = \"0.112.4\"\nduckdb = \"1.1.0\"\nuvicorn = \"0.30.6\"\npandas = \"2.2.3\"\ngeopandas = \"1.0.1\"\nnumpy = \"2.0.0\"\nscipy = \"1.14.0\"\nshapely = \"2.0.6\"\nrasterio = \"1.3.10\"\nxarray = \"2024.7.0\"\nh3 = \"3.7.6\"\n\n[build-system]\nrequires = [\"poetry-core\"]\nbuild-backend = \"poetry.core.masonry.api\"" 